[gd_scene load_steps=5 format=2]

[ext_resource path="res://GameHUDRelated/RightSidePanel/TowerInformationPanel/TowerInfoPanel.tscn" type="PackedScene" id=1]
[ext_resource path="res://GameHUDRelated/RightSidePanel/RightSidePanel.gd" type="Script" id=2]
[ext_resource path="res://GameHUDRelated/RightSidePanel/RoundStartPanel/RoundStatusPanel.tscn" type="PackedScene" id=3]
[ext_resource path="res://GameHUDRelated/RightSidePanel/RoundDamageStatsPanel/RoundDamageStatsPanel.tscn" type="PackedScene" id=4]

[node name="RightSidePanel" type="MarginContainer"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RoundDamageStatsPanel" parent="." instance=ExtResource( 4 )]
margin_right = 120.0
margin_bottom = 440.0

[node name="RoundStatusPanel" parent="." instance=ExtResource( 3 )]

[node name="TowerInfoPanel" parent="." instance=ExtResource( 1 )]
margin_right = 120.0
margin_bottom = 440.0
